--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -386,6 +386,7 @@
                     <span id="now-playing-key"></span>
                     <span id="now-playing-year"></span>
                 </div>
+                <div id="now-playing-comment" class="now-playing-comment"></div>
             </div>
             <div id="now-playing-scene-leaf" class="set-search-card"></div>
             <div id="now-playing-genre-leaf" class="set-search-card"></div>
