--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -377,10 +377,9 @@
 
         <!-- Browse Mode -->
         <div id="set-drawer-browse" class="set-drawer-section hidden">
-            <input type="text" id="set-drawer-search" class="set-drawer-search" placeholder="Search playlists and tree nodes...">
+            <input type="text" id="set-drawer-search" class="set-drawer-search" placeholder="Search collections and playlists...">
             <div id="set-drawer-playlists" class="set-drawer-list"></div>
-            <div id="set-drawer-scene-tree" class="set-drawer-tree"></div>
-            <div id="set-drawer-genre-tree" class="set-drawer-tree"></div>
+            <div id="set-drawer-collection-leaves" class="set-drawer-list"></div>
         </div>
 
         <!-- Detail Mode -->
@@ -396,8 +395,7 @@
             <div id="set-drawer-search-results" class="set-drawer-track-list"></div>
             <div id="set-drawer-selected-track" class="set-drawer-selected-track hidden"></div>
             <div id="set-drawer-search-context" class="set-drawer-search-context hidden">
-                <div id="set-search-card-scene" class="set-search-card"></div>
-                <div id="set-search-card-genre" class="set-search-card"></div>
+                <div id="set-search-card-collection" class="set-search-card"></div>
             </div>
         </div>
 
@@ -416,8 +414,8 @@
                 </div>
                 <div id="now-playing-comment" class="now-playing-comment"></div>
             </div>
-            <div id="now-playing-scene-leaf" class="set-search-card"></div>
-            <div id="now-playing-genre-leaf" class="set-search-card"></div>
+            <div id="now-playing-collection-leaf" class="set-search-card"></div>
+            <div id="now-playing-also-in" class="now-playing-also-in"></div>
             <div class="now-playing-controls">
                 <div class="now-playing-progress-container">
                     <div id="now-playing-progress-bar" class="now-playing-progress-bar">
