--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -341,11 +341,13 @@
                 <!-- BPM Grid + Track Columns -->
                 <div class="set-bpm-area">
                     <div class="set-bpm-axis">
+                        <span class="set-bpm-label" data-bpm="170">170</span>
                         <span class="set-bpm-label" data-bpm="150">150</span>
                         <span class="set-bpm-label" data-bpm="130">130</span>
                         <span class="set-bpm-label" data-bpm="110">110</span>
                         <span class="set-bpm-label" data-bpm="90">90</span>
                         <span class="set-bpm-label" data-bpm="70">70</span>
+                        <span class="set-bpm-label" data-bpm="50">50</span>
                     </div>
                     <div id="set-bpm-grid" class="set-bpm-grid">
                         <svg id="set-energy-svg" class="set-energy-svg"></svg>
